UF/kubernetes/deploymentservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ct003-tag-uf-generator
  namespace: ct003-tag-uf-v1
  labels:
    app: ct003-tag-uf-generator
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: ct003-tag-uf-generator
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: ct003-tag-uf-generator
    spec:
      containers:
      - name: ct003-tag-uf-generator-frontend-container
        image: 192.168.2.164:5000/ct003-tag-uf-v1:docker_tag
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: ct003-tag-uf-generator
  namespace: ct003-tag-uf-v1
  labels:
    app: ct003-tag-uf-generator
spec:
  selector:
    app: ct003-tag-uf-generator
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
    - name: https
      protocol: TCP
      port: 443
      targetPort: 3000
  type: ClusterIP
