UF/kubernetes/gateway-uf-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ct003-tag-uf-generator-httproute
  namespace: ct003-tag-uf-v1
spec:
  parentRefs:
    - name: tgaprod-gw
      namespace: kgateway-system
      sectionName: https
  hostnames:
    - "tgaprod910.toruslowcode.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /ct003/tag/tag/v1
      backendRefs:
        - name: ct003-tag-uf-generator
          port: 443
